rm Git repo option, because it requires commit hash but we force it to be master always

--- a/persistent_storage/jupyterhub/templates/home.html
+++ b/persistent_storage/jupyterhub/templates/home.html
@@ -101,7 +101,8 @@
                 <li class="dropdown-item" value="gh"><a href="#">GitHub</a></li>
                 <li class="dropdown-item" value="gist"><a href="#">Gist</a></li>
                 <li class="dropdown-item" value="gl"><a href="#">GitLab.com</a></li>
-                <li class="dropdown-item" value="git"><a href="#">Git repository</a></li>
+                  {# FIXME Git repo option is removed, because it requeires commit hash but we force it to be master always #}
+{#                <li class="dropdown-item" value="git"><a href="#">Git repository</a></li>#}
               </ul>
             </div>
           </div>
