--- a/persistent_storage/jupyterhub/templates/home.html
+++ b/persistent_storage/jupyterhub/templates/home.html
@@ -14,17 +14,20 @@
 {#    <script src="{{static_url("components/bootstrap/dist/js/bootstrap.min.js") }}" type="text/javascript" charset="utf-8"></script>#}
 {% endblock %}
 
-{% block main %}
-
 {% set state = user.spawner.get_state() %}
 {% if state %}
 {% set history =  state.get('history', []) %}
+{% else %}
+{% set history =  [] %}
+{% endif %}
+
+{% block main %}
 {% if history %}
 <div class="container">
   <div id="launch_history">
     <h4>Your Projects</h4>
     <div class="table-responsive">
-     <table class="table table-striped">
+     <table id="your-projects" class="table table-striped">
          <thead>
          <tr>
              <th>Repository</th>
@@ -38,7 +41,9 @@
             {% for e in history %}
                 <tr>
 {#                    <td>{{ e[0].rstrip('/').split('/')[-1] }}</td>#}
-                    <td style="vertical-align: middle;"><a href="{{ e[0] }}" target="_blank">{{ '/'.join(e[0].rstrip('/').split('://', 1)[-1].split('/', 2)[-2:]) }}</a></td>
+                    {% set repo_display_name = '/'.join(e[0].rstrip('/').split('://', 1)[-1].split('/', 2)[-2:]) %}
+                    {% set is_defaul_image = e[0].rstrip('/').endswith('github.com/gesiscss/data_science_image') %}
+                    <td style="vertical-align: middle;"><a href="{{ e[0] }}" target="_blank">{{ repo_display_name }}</a></td>
                     <td style="vertical-align: middle;">{{ e[1][:7] }}</td>
                     <td style="vertical-align: middle;">{{ e[2] }}</td>
                     <td style="vertical-align: middle;">
@@ -50,7 +55,7 @@
                         </label>
                         {% if user.running and loop.index == loop.length %}
                         {# last element in history is currently running, add Stop button for it #}
-                        <a id="stop" role="button" class="btn btn-sm btn-danger" data-start="start-{{ e[1] }}">Stop</a>
+                        <a id="stop" role="button" class="btn btn-sm btn-danger">Stop</a>
 {#                        <label style="font-size: 12px;">{% if user.spawner._stop_pending %}Your server is stopping{% endif %}</label>#}
                         {% endif %}
                         {# add Start button for each element, if user has no server running #}
@@ -59,7 +64,6 @@
                            class="btn btn-sm btn-primary common-start{% if user.spawner._stop_pending or (user.spawner.active and loop.index != loop.length) %} hidden{% endif %}"
                            id="start-{{ e[1] }}"
                            href="{% if user.spawner.active and loop.index == loop.length %}{{ url }}{% else %}#{% endif %}"
-                           data-url="{{ e[0] }}" data-ref="{{ e[1] }}"
                            style="vertical-align: top;">
                            {% if user.spawner.active and loop.index == loop.length %}
                            {# if last element is running, change its text #}
@@ -68,8 +72,14 @@
                            Start
                            {% endif %}
                         </a>
-                        {# TODO add custom jupyterhub handler to delete rep from history and disk. it should redirect back to jhub home. #}
-{#                        <a id="delete-{{ e[1] }}" href="#" title="Delete from history and disk"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>#}
+                        {% if not is_defaul_image %}
+                        <a id="delete-{{ e[1] }}" class="common-delete{% if user.spawner.active %} hidden{% endif %}"
+                           href="#" title="Delete from projects list and persistent storage"
+                           data-name="{{ repo_display_name }}"
+                           data-toggle="modal" data-target="#delete-project">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        </a>
+                        {% endif %}
                      </td>
                 </tr>
             {% endfor %}
@@ -77,8 +87,32 @@
      </table>
     </div>
   </div>
+  <!-- Modal -->
+  <div class="modal fade" id="delete-project" tabindex="-1" role="dialog" aria-labelledby="delete-project-label">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button id="delete-close" type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="delete-project-label">Delete a project</h4>
+        </div>
+        <div class="modal-body">
+          <span id="delete-project-text">Are you sure that you want to delete the project?</span>
+          <br>
+          <label style="font-weight: normal;"><input type="checkbox" id="delete-on-disk"> Delete the project also on my persistent storage.</label>
+          <input type="hidden" id="delete-ref" value=""/>
+          <input type="hidden" id="delete-name" value=""/>
+          <input type="hidden" id="delete-id" value=""/>
+        </div>
+        <div id="delete-project-success" class="alert alert-success hidden"></div>
+        <div id="delete-project-error" class="alert alert-danger hidden"></div>
+        <div class="modal-footer">
+          <button type="button" id="delete-cancel" class="btn btn-default" data-dismiss="modal">No</button>
+          <button type="button" id="delete-confirm" class="btn btn-default">Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-{% endif %}
 {% endif %}
 
 <div id="main" class="container">
@@ -89,7 +123,7 @@
     <div class="col-lg-12">
     {% block binder_form %}
     <form id="build-form" class="form jumbotron">
-        <h4 id="form-header" class='row'>Build and launch a repository</h4>
+        <h4 id="form-header" class='row'>Build and launch a new repository</h4>
         <input type="hidden" id="provider_prefix" value="gh"/>
         <input type="hidden" id="user_options" value="?run-nbgitpuller=True&reset-repo=False"/>
         <div class="form-group row">
@@ -231,11 +265,6 @@
 {% block script %}
 
 <script type="text/javascript">
-// initialize binder form
-indexMain();
-</script>
-
-<script type="text/javascript">
 
 require(["jquery", "jhapi"], function($, JHAPI) {
   "use strict";
@@ -261,18 +290,29 @@ require(["jquery", "jhapi"], function($, JHAPI) {
         $('.common-start').attr('href', '#').text('Start').removeClass('hidden');
         $('.common-update').removeClass('hidden');
         $('.common-reset').removeClass('hidden');
+        $('.common-delete').removeClass('hidden');
       }
     });
   });
 });
 
+var PROJECTS = {};
+//var PROJECTS_LIST = [];
+for (const p of {{ history|safe }}) {
+    PROJECTS[p[1]] = {url: p[0].toLowerCase()};  // p[1] is commit hash
+    //PROJECTS_LIST.push(p[0].toLowerCase());
+}
+Object.freeze(PROJECTS);
+//Object.freeze(PROJECTS_LIST);
+//var PROJECTS_LIMIT = 5;
 
 $('.common-start').click(function(e) {
     if ($(this).attr('href') === '#') {
         e.preventDefault();
         $("#build-form").get(0).scrollIntoView();
         // fill the binder form with values of selected repo and submit
-        var repo_url = $(this).data().url.toLowerCase();
+        var ref = $(this).prop('id').replace("start-","");
+        var repo_url = PROJECTS[ref].url;
         var provider_prefix;
         var provider_prefix_selected;
         if (repo_url.indexOf('github.com') !== -1 && repo_url.indexOf('gist.github.com') === -1) {
@@ -293,24 +333,97 @@ $('.common-start').click(function(e) {
         $('#provider_prefix').val(provider_prefix);
         $('#provider_prefix-selected').text(provider_prefix_selected);
         // update checkbox is checked, so update image and code base
-        var update = $('#'+$(this).prop('id').replace('start-', 'update-')).prop('checked');
+        var update = $('#update-'+ref).prop('checked');
         // reset checkbox is checked, so reset the code base
-        var reset = $('#'+$(this).prop('id').replace('start-', 'reset-')).prop('checked');
+        var reset = $('#reset-'+ref).prop('checked');
         $('#user_options').val('?run-nbgitpuller='+update+'&reset-repo='+reset);
         if (reset || update) {
             $('#ref').val('master');
         } else {
-            $('#ref').val($(this).data().ref);
+            $('#ref').val(ref);
         }
-        $('#repository').val($(this).data().url);
+        $('#repository').val(repo_url);
         $('#filepath').val('');
         $('button#submit').trigger('click');
         // hide all start buttons
         $('.common-start').addClass('hidden');
         $('.common-update').addClass('hidden');
         $('.common-reset').addClass('hidden');
+        $('.common-delete').addClass('hidden');
         return false;
     }
 });
+
+$('.common-delete').on('click', function (event) {
+  $('#delete-cancel').text("No");
+  $('#delete-confirm').removeClass("hidden");
+  $('#delete-on-disk').prop("checked", false);
+  $('#delete-project-success').text('').addClass("hidden");
+  $('#delete-project-error').text('').addClass("hidden");
+  var button = $(this);
+  var ref = button.prop('id').replace("delete-","");
+  $('#delete-ref').val(ref);
+  $('#delete-id').val(button.prop('id'));
+  var project_name = button.data('name');
+  $('#delete-name').val(project_name);
+  $('#delete-project-label').text('Delete project ' + project_name);
+  $('#delete-project-text').text('Are you sure that you want to delete "' + project_name +'" project?');
+});
+
+$('#delete-confirm').on('click', function (event) {
+    var ref = $('#delete-ref').val();
+    var repo_url = PROJECTS[ref].url;
+    var dataToSend = JSON.stringify({repo_url: repo_url,
+                                     delete_on_disk: $('#delete-on-disk').prop("checked"),
+                                     name: $('#delete-name').val(),
+                                     id: $('#delete-id').val()});
+    var url = '/hub/delete_project';
+    console.log(ref, url, dataToSend);
+    $.ajax({
+        url: url,
+        type: 'POST',
+        data: dataToSend,
+        success: function (jsonResponse) {
+            var objresponse = JSON.parse(jsonResponse);
+            if ("error" in objresponse) {
+                $('#delete-project-success').text('').addClass("hidden");
+                $('#delete-project-error').text(objresponse['error']).removeClass("hidden");
+            } else {
+                $('#delete-project-error').text('').addClass("hidden");
+                $('#delete-project-success').text(objresponse['success']).removeClass("hidden");
+                $('#delete-cancel').text("Okay");
+                $('#delete-confirm').addClass("hidden");
+                $('#delete-ref').val('');
+                $('#delete-name').val('');
+                $('#delete-id').val('');
+                //$('#delete-close').trigger('click');
+                $("#"+objresponse["id"]).closest('tr').remove();
+            }
+            },
+        error: function () {
+            $('#delete-project-success').text('').addClass("hidden");
+            $('#delete-project-error').text("Error. Please try again.").removeClass("hidden");
+        }
+    });
+});
+
+/*
+$('#build-form').submit(function(e) {
+    console.log(PROJECTS_LIST.length, $('#repository').val());
+    // check if new project and if user has already reached projects limit
+    if (!PROJECTS_LIST.includes($('#repository').val()) && PROJECTS_LIST.length >= PROJECTS_LIMIT) {
+        e.stopImmediatePropagation();
+        alert("No more than " + PROJECTS_LIMIT + " projects is allowed. " +
+              "One must be deleted before a new project can be created.");
+        return false;
+    }
+    return true;
+});
+*/
+</script>
+
+<script type="text/javascript">
+// initialize binder form
+indexMain();
 </script>
 {% endblock %}
