--- a/persistent_storage/jupyterhub/templates/home.html
+++ b/persistent_storage/jupyterhub/templates/home.html
@@ -28,7 +28,7 @@
              <th>Repository</th>
 {#             <th>URL</th>#}
              <th>Commit</th>
-             <th>Last launched</th>
+             <th>Last used</th>
              <th>Actions</th>
          </tr>
          </thead>
@@ -38,7 +38,7 @@
                 {% set repo_display_name = '/'.join(project[0].rstrip('/').split('://', 1)[-1].split('/', 2)[-2:]) %}
                 <td style="vertical-align: middle;"><a href="{{ project[0] }}" target="_blank">{{ repo_display_name }}</a></td>
                 <td style="vertical-align: middle;">{{ project[1][:7] }}</td>
-                <td style="vertical-align: middle;">{{ project[2] }}</td>
+                <td style="vertical-align: middle;" class="time-col">{{ project[2] }}</td>
                 <td style="vertical-align: middle;">
                     {% set project_running = user.running and loop.index == loop.length %}
                     {% set project_active = user.spawner.active and loop.index == loop.length %}
@@ -249,7 +249,7 @@
 
 <script type="text/javascript">
 
-require(["jquery", "jhapi"], function($, JHAPI) {
+require(["jquery", "jhapi", "moment"], function($, JHAPI, moment) {
   "use strict";
 
   var base_url = window.jhdata.base_url;
@@ -274,120 +274,133 @@ require(["jquery", "jhapi"], function($, JHAPI) {
       }
     });
   });
+
+  // copied from admin.js
+  $(".time-col").map(function (i, el) {
+    // convert ISO datestamps to nice momentjs ones
+    el = $(el);
+    let m = moment(new Date(el.text().trim()));
+    //el.text(m.isValid() ? m.fromNow() : "never");
+    el.text(m.isValid() ? m.calendar(): "never");
+  });
 });
 
-var PROJECTS = {};
-for (const p of {{ projects|safe }}) {
-    PROJECTS[p[1]] = {url: p[0].toLowerCase()};  // p[1] is commit hash
-}
-Object.freeze(PROJECTS);
 
-$('.project-launch').click(function(e) {
-    if ($(this).attr('href') === '#') {
-        e.preventDefault();
-        $("#build-form").get(0).scrollIntoView();
-        // fill the binder form with values of selected repo and submit
-        var ref = $(this).prop('id').replace("launch-","");
-        var repo_url = PROJECTS[ref].url;
-        var provider_prefix;
-        var provider_prefix_selected;
-        if (repo_url.indexOf('github.com') !== -1 && repo_url.indexOf('gist.github.com') === -1) {
-           provider_prefix = 'gh';
-           provider_prefix_selected = 'GitHub';
-        } else if (repo_url.indexOf('gitlab.com') !== -1) {
-           // gitlab.com
-           provider_prefix = 'gl';
-           provider_prefix_selected = 'GitLab.com';
-        } else if (repo_url.indexOf('gist.github.com') !== -1) {
-           // gist.github.com
-           provider_prefix = 'gist';
-           provider_prefix_selected = 'Gist';
-        } else {
-           provider_prefix = 'git';
-           provider_prefix_selected = 'Git repository';
-        }
-        $('#provider_prefix').val(provider_prefix);
-        $('#provider_prefix-selected').text(provider_prefix_selected);
-        $('#ref').val(ref);
-        $('#repository').val(repo_url);
-        $('#filepath').val('');
-        if ($(this).data('last') === "never") {
-            // if never launched (default repo)
-            $('#user_options').val('?run-nbgitpuller=True');
-        } else {
-            $('#user_options').val('?run-nbgitpuller=False');
-        }
-        $('button#submit').trigger('click');
-        // hide all launch and delete buttons
-        $('.project-launch').addClass('hidden');
-        $('.project-delete').addClass('hidden');
-        return false;
+$(document).ready(function() {
+
+    var PROJECTS = {};
+    for (const p of {{ projects|safe }}) {
+        PROJECTS[p[1]] = {url: p[0].toLowerCase()};  // p[1] is commit hash
     }
-});
+    Object.freeze(PROJECTS);
 
-$('.project-delete').on('click', function (event) {
-    // reset parts of dialog
-    $('#delete-project-body').children().removeClass("hidden");
-    $('#delete-cancel').text("No");
-    $('#delete-confirm').removeClass("hidden");
-    $('#delete-on-disk').prop("checked", false);
-    $('#delete-project-success').text('').addClass("hidden");
-    $('#delete-project-error').text('').addClass("hidden");
-    // fill hidden inputs, they will be used in ajax call to delete project
-    var button = $(this);
-    var ref = button.prop('id').replace("delete-","");
-    $('#delete-ref').val(ref);  // to get repo url
-    $('#delete-id').val(button.prop('id'));  // this will be used success of ajax call to delete project row from table
-    var project_name = button.data('name');
-    $('#delete-name').val(project_name);
-    // update text in confirm dialog
-    $('#delete-project-label').text('Delete project ' + project_name);
-    $('#delete-project-text').text('Are you sure that you want to delete "' + project_name +'" project?');
-});
-
-$('#delete-confirm').on('click', function (event) {
-    var ref = $('#delete-ref').val();
-    var repo_url = PROJECTS[ref].url;
-    var data_to_send = JSON.stringify({repo_url: repo_url,
-                                     delete_on_disk: $('#delete-on-disk').prop("checked"),
-                                     name: $('#delete-name').val(),
-                                     id: $('#delete-id').val()});
-    var url = '/hub/delete_project';
-    console.log(ref, url, data_to_send);
-    $.ajax({
-        url: url,
-        type: 'POST',
-        data: data_to_send,
-        success: function (json_response) {
-            var response = JSON.parse(json_response);
-            if ("error" in response) {
-                // show error message
-                $('#delete-project-body').children().addClass("hidden");
-                $('#delete-project-success').text('').addClass("hidden");
-                $('#delete-project-error').text(response['error']).removeClass("hidden");
-                // show only OK button, user should handle the error first
-                $('#delete-cancel').text("Okay");
-                $('#delete-confirm').addClass("hidden");
+    $('.project-launch').click(function(e) {
+        if ($(this).attr('href') === '#') {
+            e.preventDefault();
+            $("#build-form").get(0).scrollIntoView();
+            // fill the binder form with values of selected repo and submit
+            var ref = $(this).prop('id').replace("launch-","");
+            var repo_url = PROJECTS[ref].url;
+            var provider_prefix;
+            var provider_prefix_selected;
+            if (repo_url.indexOf('github.com') !== -1 && repo_url.indexOf('gist.github.com') === -1) {
+               provider_prefix = 'gh';
+               provider_prefix_selected = 'GitHub';
+            } else if (repo_url.indexOf('gitlab.com') !== -1) {
+               // gitlab.com
+               provider_prefix = 'gl';
+               provider_prefix_selected = 'GitLab.com';
+            } else if (repo_url.indexOf('gist.github.com') !== -1) {
+               // gist.github.com
+               provider_prefix = 'gist';
+               provider_prefix_selected = 'Gist';
             } else {
-                // show success message
-                $('#delete-project-body').children().addClass("hidden");
-                $('#delete-project-error').text('').addClass("hidden");
-                $('#delete-project-success').text(response['success']).removeClass("hidden");
-                // project is deleted, so leave just an OK button to close the modal
-                $('#delete-cancel').text("Okay");
-                $('#delete-confirm').addClass("hidden");
-                // reset hidden inputs
-                $('#delete-ref').val('');
-                $('#delete-name').val('');
-                $('#delete-id').val('');
-                //$('#delete-close').trigger('click');
-                $("#"+response["id"]).closest('tr').remove();
+               provider_prefix = 'git';
+               provider_prefix_selected = 'Git repository';
             }
-            },
-        error: function () {
-            $('#delete-project-success').text('').addClass("hidden");
-            $('#delete-project-error').text("Error. Please try again.").removeClass("hidden");
+            $('#provider_prefix').val(provider_prefix);
+            $('#provider_prefix-selected').text(provider_prefix_selected);
+            $('#ref').val(ref);
+            $('#repository').val(repo_url);
+            $('#filepath').val('');
+            if ($(this).data('last').toLowerCase() === "never") {
+                // if never launched (default repo)
+                $('#user_options').val('?run-nbgitpuller=True');
+            } else {
+                $('#user_options').val('?run-nbgitpuller=False');
+            }
+            $('button#submit').trigger('click');
+            // hide all launch and delete buttons
+            $('.project-launch').addClass('hidden');
+            $('.project-delete').addClass('hidden');
+            return false;
         }
+    });
+
+    $('.project-delete').on('click', function (event) {
+        // reset parts of dialog
+        $('#delete-project-body').children().removeClass("hidden");
+        $('#delete-cancel').text("No");
+        $('#delete-confirm').removeClass("hidden");
+        $('#delete-on-disk').prop("checked", false);
+        $('#delete-project-success').text('').addClass("hidden");
+        $('#delete-project-error').text('').addClass("hidden");
+        // fill hidden inputs, they will be used in ajax call to delete project
+        var button = $(this);
+        var ref = button.prop('id').replace("delete-","");
+        $('#delete-ref').val(ref);  // to get repo url
+        $('#delete-id').val(button.prop('id'));  // this will be used success of ajax call to delete project row from table
+        var project_name = button.data('name');
+        $('#delete-name').val(project_name);
+        // update text in confirm dialog
+        $('#delete-project-label').text('Delete project ' + project_name);
+        $('#delete-project-text').text('Are you sure that you want to delete "' + project_name +'" project?');
+    });
+
+    $('#delete-confirm').on('click', function (event) {
+        var ref = $('#delete-ref').val();
+        var repo_url = PROJECTS[ref].url;
+        var data_to_send = JSON.stringify({repo_url: repo_url,
+                                         delete_on_disk: $('#delete-on-disk').prop("checked"),
+                                         name: $('#delete-name').val(),
+                                         id: $('#delete-id').val()});
+        var url = '/hub/delete_project';
+        console.log(ref, url, data_to_send);
+        $.ajax({
+            url: url,
+            type: 'POST',
+            data: data_to_send,
+            success: function (json_response) {
+                var response = JSON.parse(json_response);
+                if ("error" in response) {
+                    // show error message
+                    $('#delete-project-body').children().addClass("hidden");
+                    $('#delete-project-success').text('').addClass("hidden");
+                    $('#delete-project-error').text(response['error']).removeClass("hidden");
+                    // show only OK button, user should handle the error first
+                    $('#delete-cancel').text("Okay");
+                    $('#delete-confirm').addClass("hidden");
+                } else {
+                    // show success message
+                    $('#delete-project-body').children().addClass("hidden");
+                    $('#delete-project-error').text('').addClass("hidden");
+                    $('#delete-project-success').text(response['success']).removeClass("hidden");
+                    // project is deleted, so leave just an OK button to close the modal
+                    $('#delete-cancel').text("Okay");
+                    $('#delete-confirm').addClass("hidden");
+                    // reset hidden inputs
+                    $('#delete-ref').val('');
+                    $('#delete-name').val('');
+                    $('#delete-id').val('');
+                    //$('#delete-close').trigger('click');
+                    $("#"+response["id"]).closest('tr').remove();
+                }
+                },
+            error: function () {
+                $('#delete-project-success').text('').addClass("hidden");
+                $('#delete-project-error').text("Error. Please try again.").removeClass("hidden");
+            }
+        });
     });
 });
 </script>
