--- a/persistent_storage/jupyterhub/templates/home.html
+++ b/persistent_storage/jupyterhub/templates/home.html
@@ -2,6 +2,7 @@
 
 {% block stylesheet %}
 <meta id="base-url" data-url="/services/binder/">
+<meta id="badge-base-url" data-url="{{badge_base_url}}">
 <script src="/services/binder/static/dist/bundle.js"></script>
 <link href="/services/binder/static/dist/styles.css" rel="stylesheet"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
