add note about auth confirm

--- a/persistent_storage/jupyterhub/templates/home.html
+++ b/persistent_storage/jupyterhub/templates/home.html
@@ -22,6 +22,11 @@
 <div class="container">
   <div>
     <h4>Your Projects</h4>
+    <div>NOTE: User has to go to https://notebooks-test.gesis.org/services/binder/
+        and confirm that Binder service can identify the user with user's JupyterHub account.
+        (A service is attempting to authorize with your JupyterHub account)<br>
+        Otherwise nothing works in this page.
+    </div>
     <div class="table-responsive">
      <table id="your-projects" class="table table-striped">
          <thead>
