replace gesis notebooks

--- a/helm-chart/files/etc/jupyterhub/templates/home.html
+++ b/helm-chart/files/etc/jupyterhub/templates/home.html
@@ -23,7 +23,7 @@
   <div id="header" class="text-center" style="border-bottom: 0; padding-top: 12px;">
   {#      <h3>Turn a Git repo into a collection of interactive notebooks</h3>#}
     <div id="explanation" style="font-size: 1.8em;">
-      Have a Binder-Ready repository? With GESIS Notebooks, turn this repository into a persistent Jupyter environment, allowing you to continue your work from anywhere at any time.
+      Have a Binder-Ready repository? With the Persistent BinderHub, turn this repository into a persistent Jupyter environment, allowing you to continue your work from anywhere at any time.
     </div>
   </div>
   {% endblock binder_header %}
