put the link to the post

--- a/helm-chart/files/etc/jupyterhub/templates/home.html
+++ b/helm-chart/files/etc/jupyterhub/templates/home.html
@@ -277,7 +277,7 @@
   {% endblock how_it_works %}
 
   <div class="row text-center">
-    <h3>questions?<br />read <a href="#">this post</a> and join the discussion</h3>
+    <h3>questions?<br />read <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865">this post</a> and join the discussion</h3>
   </div>
 </div>
 {% endblock %}
